--- a/Jaguar_Packges/ps4_core/bzip2/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/bzip2/PKGBUILD
@@ -12,8 +12,8 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/bzip2-1.0.8.tar.gz"
-     "http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/bzip2-1.0.8-install_docs-1.patch"
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/bzip2-1.0.8.tar.gz"
+     "https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/bzip2-1.0.8-install_docs-1.patch"
     )
 
 
