--- a/Jaguar_Packges/ps4_core/coreutils/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/coreutils/PKGBUILD
@@ -12,8 +12,8 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/coreutils-9.5.tar.xz"
-     "http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/coreutils-9.5-i18n-2.patch"
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/coreutils-9.5.tar.xz"
+     "https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/coreutils-9.5-i18n-2.patch"
     )
 
 
