--- a/Jaguar_Packges/ps4_core/elfutils/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/elfutils/PKGBUILD
@@ -12,7 +12,7 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/elfutils-0.191.tar.bz2")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/elfutils-0.191.tar.bz2")
 
 
 # Prepare script
