--- a/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
@@ -13,7 +13,7 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/flit_core-3.9.0.tar.gz")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/flit_core-3.9.0.tar.gz")
 
 
 # Prepare script
