--- a/Jaguar_Packges/ps4_core/kbd/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/kbd/PKGBUILD
@@ -12,8 +12,8 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/kbd-2.6.4.tar.xz"
-     "http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/kbd-2.6.4-backspace-1.patch"
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/kbd-2.6.4.tar.xz"
+     "https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/kbd-2.6.4-backspace-1.patch"
     )
 
 
