--- a/Jaguar_Packges/ps4_core/less/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/less/PKGBUILD
@@ -13,7 +13,7 @@ DEPENDS=("ps4_core")
 
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/less-661.tar.gz")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/less-661.tar.gz")
 
 
 # Prepare script
