--- a/Jaguar_Packges/ps4_core/libffi/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/libffi/PKGBUILD
@@ -12,7 +12,7 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/libffi-3.4.6.tar.gz")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/libffi-3.4.6.tar.gz")
 
 
 # Prepare script
