--- a/Jaguar_Packges/ps4_core/man-db/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/man-db/PKGBUILD
@@ -12,7 +12,7 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/man-db-2.12.1.tar.xz")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/man-db-2.12.1.tar.xz")
 
 
 # Prepare script
