--- a/Jaguar_Packges/ps4_core/python/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/python/PKGBUILD
@@ -13,8 +13,8 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/Python-3.12.5.tar.xz"
-     "http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/python-3.12.5-docs-html.tar.bz2")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/Python-3.12.5.tar.xz"
+     "https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/python-3.12.5-docs-html.tar.bz2")
 
 
 # Prepare script
