--- a/Jaguar_Packges/ps4_core/sed/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/sed/PKGBUILD
@@ -12,7 +12,7 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/sed-4.9.tar.xz")
+SRC=("https://lfs.gnlug.org/pub/lfs/lfs-packages/12.2/sed-4.9.tar.xz")
 
 
 # Prepare script
